--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
         </section>
     </main>
     <footer>
+        <div class="connet"><h1>Lets Connect</h1><p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p><img src="./images/icons/facebook.png" alt=""><img src="./images/icons/insta.png" alt=""><img src="./images/icons/twitter.png" alt=""></div>
+        <div class="form">
+            <h1>Let's Message me. Right Now.</h1>
+            <input  class="input" type="text" name="" id="" placeholder="Your Name">
+            <input  class="input" type="email" name="" id="" placeholder="Your Email">
+            <textarea name="" placeholder="Message" id="text" cols="30" rows="10"></textarea>
+            <input type="submit" name="" id="submit">
+
+        </div>
 
     </footer>
 </body>
